# vivcord-rs

./: .gitignore  Cargo.toml  README.md
examples/: testing.rs
scripts/: generate_docs.sh  run_tests.sh
src/: api.rs  client.rs  lib.rs  macros.rs  main.rs
src/datatypes/: intents.rs  message.rs  mod.rs  snowflake.rs
src/gateway/: event.rs  events.rs  mod.rs
