[package]
name = "vivcord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = {version = "1.21", features = ["rt"]}
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0", features = ["derive"]}
websocket = {version = "0.26", default-features=false}

[dev-dependencies]
tokio = {version = "1.21", features = ["rt", "rt-multi-thread", "macros"]}
tokio-test = "0.4"