[package]
name = "vivcord"
description = "WIP discord wrapper by vivax"

license = "MIT"
readme = "README.md"

respository = "https://github.com/vivax3794/vivcord-rs"

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = {version = "1.21", features = ["rt", "macros", "sync", "time"]}

serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}

reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = {version = "0.17", features = ["rustls-tls-native-roots"]}
rustls = "0.20"
webpki-roots = "0.22"
httparse = "1.8"
# http = "*"

rand = "0.8"
bitflags = "1.3"

[dev-dependencies]
tokio = {version = "1.21", features = ["rt", "rt-multi-thread", "macros"]}
tokio-test = "0.4"